# all-japan-traffic-grid

./: .gitignore  MATSIM.md  README.md  pyproject.toml  requirements.txt
.auto-claude/specs/001-build-japan-traffic-congestion-map-system/: implementation_plan.json
.claude/: CLAUDE.md
.github/workflows/: pages.yml
cloud/: README.md  run_matsim_cloud.sh
scripts/: download_pbf.py  generate_demo_data.py  generate_map.py  run_matsim.py  run_matsim_fullnetwork.py  run_partitioned.py  run_simulation.py
src/: __init__.py  config.py
src/data/: __init__.py  cache.py  downloader.py  parser.py
src/matsim/: __init__.py  config_generator.py  event_parser.py  java_manager.py  network_converter.py  partitioned.py  pipeline.py  population.py  runner.py  signal_extractor.py
src/network/: __init__.py  builder.py  filter.py  simplify.py
src/simulation/: __init__.py  demand.py  runner.py  world.py
src/visualization/: __init__.py  congestion_map.py  export.py
tests/: __init__.py  conftest.py  test_cache.py  test_congestion_map.py  test_demand.py  test_downloader.py  test_integration.py  test_network_builder.py  test_parser.py  test_parser_module.py  test_runner.py  test_simulation.py  test_visualization.py
visualize/: japan_matsim_animated.py  japan_traffic_animated_v2.py
visualize/output/: index.html
web/: index.html
web/css/: style.css
web/js/: app.js  data-loader.js  layers.js  stats.js  timeline.js
